# busylib-py

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  LICENSE  MANIFEST.in  Makefile  README.md  assets  inspect_usb.py  keepout_label_72x16.anim  mkdocs.yml  openapi.json  openapi.yaml  probe_usb.py  pyproject.toml  pyrightconfig.json  run.sh  speed_racer_scores.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  pypi-publish.yml
agents/: agents.md  firmware_bugs.md  issues_and_improvements.md  library_analysis.md  library_checklist.md  overview.md  roadmap.md
busylib/: __init__.py  client.py  types.py  utils.py
docs/: index.md  mcp-contract.md  quick-start.md  repository-structure.md  requirements.txt
docs/api/: core-client.md  index.md  now-playing-example.md
docs/showcase/: now-playing.md
examples/bar_events/: __main__.py  main.py
examples/bc/: __main__.py  app_paths.py  client_factory.py  logging_config.py  main.py  models.py  panels.py  preview.py  run.sh  runner.py  startup.py  transfer.py  ui.py  ui_helpers.py
examples/hltv_live/: data.json  hltv_api.py  hltv_client.py  logo_cache.py  main.py  odds.py  panda.py  rendering.py  rotation.py
examples/now_playing/: README.md  __init__.py  __main__.py  main.py  models.py  providers.py  renderer.py  runner.py  sample_track.json  settings.py
examples/rasp/: README.md  main.py  yandex_api.py
examples/remote/: command_core.py  command_plugins.py  commands.py  constants.py  discovery.py  keymap.py  main.py  periodic_tasks.py  renderers.py  runner.py  settings.py  terminal_utils.py
examples/remote/commands/: __init__.py  audio.py  call.py  clear.py  clock.py  quit.py  record_audio.py  text.py  timezone_set.py
examples/schedules/: README.md  main.py
examples/snake/: main.py
examples/snake/assets/: snake_die.pcm  snake_eat.pcm  snake_move.pcm
examples/speed_racer/: __main__.py  main.py
examples/ws_debug/: __init__.py  __main__.py  main.py  simple.py
old_examples/a2s/: main.py
old_examples/assets/: demo.m4a  some.txt
old_examples/bc/: main.sh
old_examples/blink_and_sound/: main.py
old_examples/blink_and_sound_async/: main.py
old_examples/busy_and_cyr/: main.py
old_examples/draw_lyrics/: main.py
old_examples/ping-monitor/: main.py
old_examples/settings/: main.py
old_examples/streaming/: main.sh
old_examples/sync_assets/: main.py
old_examples/weewoo/: main.py
plans/: 2026-02-12.md  remote_background.md  remote_black_pixel_mode.md  remote_black_pixels.md  remote_frame.md  remote_invert_mode.md
src/busylib/: __init__.py  _utils.py  _version.py  devices.py  display.py  exceptions.py  keymap.py  screen.py  settings.py  types.py  usb.py  versioning.py
src/busylib/client/: __init__.py  access.py  account.py  assets.py  audio.py  base.py  ble.py  busy.py  display.py  firmware.py  input.py  smart_home.py  state_stream.py  storage.py  time.py  updater.py  usb.py  wifi.py
src/busylib/converter/: __init__.py  audio.py  image.py  video.py
src/busylib/features/: __init__.py  app_assets.py  dashboard.py
src/busylib/state_stream_proto/: error_pb2.py  frame_pb2.py  input_pb2.py  state_pb2.py  timer_pb2.py
src/busylib/state_stream_proto/state/: audio_pb2.py  ble_pb2.py  brightness_pb2.py  device_name_pb2.py  matter_pb2.py  power_pb2.py  timezone_pb2.py  update_pb2.py  wifi_pb2.py
src/busylib/state_stream_proto/util/: json_pb2.py
src/examples/: bc.py  remote.py
src/examples/bc/: __init__.py  main.py  preview.py  startup.py  state.py
src/examples/remote/: __init__.py  __main__.py  renderers.py  runner.py  terminal_utils.py
tests/: test_client.py  test_client_async.py
tests/busylib/: test_build_metadata.py  test_ci_workflow.py  test_display.py  test_docstrings_core.py  test_keymap.py  test_manifest.py  test_precommit_config.py  test_pypi_workflow.py  test_pyproject_dependencies.py  test_readme_pypi.py  test_versioning.py
tests/busylib/client/: test_audio.py  test_base.py  test_client.py  test_client_async.py  test_client_mixins.py  test_display_ws.py  test_input.py  test_openapi_sync.py  test_status_ws.py  test_storage.py  test_usb.py  test_usb_discover.py
tests/busylib/converter/: test_converter.py  test_docstrings.py  test_image.py
tests/busylib/features/: test_app_assets.py  test_dashboard.py
tests/examples/: conftest.py  test_async_runner.py  test_bar_events.py  test_bc_modules.py  test_bc_panels.py  test_bc_preview.py  test_bc_startup.py  test_bc_transfer.py  test_hltv_client.py  test_hltv_dependencies.py  test_hltv_live.py  test_hltv_logo_cache.py  test_hltv_rendering.py  test_hltv_rotation.py  test_logging.py  test_rasp.py  test_remote_cloud_polling.py  test_remote_command_plugins.py  test_remote_commands.py  test_remote_errors.py  test_remote_exit.py  test_remote_icons.py  test_remote_input.py  test_remote_keymap.py  test_remote_periodic.py  test_remote_renderers.py  test_remote_status.py  test_remote_switch.py  test_schedules.py  test_snake.py
tests/examples/remote/: test_command_discovery.py  test_command_feedback.py  test_discovery.py  test_record_audio_command.py  test_renderer_status_line.py  test_timezone_set_command.py
