[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=61", "setuptools-scm", "wheel" ]

[project]
name = "busylib"
description = "Python library for Busy Bar API"
readme = "README.md"
authors = [
  { name = "flipperdevices", email = "pypi@flipperdevices.com" },
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dynamic = [ "version" ]
dependencies = [
  "httpx>=0.28.1",
  "pillow>=12",
  "pydantic>=2.9",
  "pydantic-extra-types>=2.9",
  "pydantic-settings>=2.12",
  "websockets>=12",
]
urls.Documentation = "https://busylib.readthedocs.io"
urls.Homepage = "https://github.com/busy-app/busylib-py"
urls.Repository = "https://github.com/busy-app/busylib-py"

[dependency-groups]
dev = [
  "pre-commit>=3.8",
  "pyproject-fmt>=2.5.1",
  "pyright>=1.1.408",
  "pytest>=8.4.1",
  "pytest-asyncio>=0.24",
  "pytest-cov>=7",
  "ruff>=0.9",
  "tomli>=2.2",
]

[tool.setuptools]
package-dir = { "" = "src" }
packages.find.where = [ "src" ]

[tool.setuptools_scm]
write_to = "src/busylib/_version.py"
write_to_template = "__version__ = '{version}'\n"

[tool.ruff]
target-version = "py310"
line-length = 88
indent-width = 4
exclude = [
  ".git",
  ".pytest_cache",
  ".ruff_cache",
  ".venv",
  ".vscode",
  "__pycache__",
  "build",
  "dist",
  "venv",
]
format.indent-style = "space"
format.quote-style = "double"
format.line-ending = "auto"
format.skip-magic-trailing-comma = false
format.docstring-code-line-length = "dynamic"
format.docstring-code-format = false

[tool.pytest]
ini_options.addopts = "-q"
ini_options.asyncio_mode = "auto"
ini_options.pythonpath = [ "." ]
