[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=77", "setuptools-scm" ]

[project]
name = "busylib"
description = "Python library for Busy Bar API"
readme = "README.md"
license = "MIT"
authors = [
  { name = "flipperdevices", email = "pypi@flipperdevices.com" },
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [ "version" ]
dependencies = [
  "httpx>=0.28.1",
  "pillow>=12",
  "protobuf>=6.31.1",
  "pydantic>=2.9",
  "pydantic-extra-types>=2.9",
  "pydantic-settings>=2.12",
  "typing-extensions>=4.6",
  "websockets>=12",
  "zeroconf>=0.150",
]
urls.Documentation = "https://busylib.readthedocs.io"
urls.Homepage = "https://github.com/busy-app/busylib-py"
urls.Repository = "https://github.com/busy-app/busylib-py"

[dependency-groups]
dev = [
  "grpcio-tools>=1.74",
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.28",
  "pre-commit>=3.8",
  "pyproject-fmt>=2.5.1",
  "pyright>=1.1.408",
  "pytest>=8.4.1",
  "pytest-asyncio>=0.24",
  "pytest-cov>=7",
  "ruff>=0.15",
  "tomli>=2.2",
]

[tool.setuptools]
packages.find.where = [ "src" ]
package-dir = { "" = "src" }

[tool.setuptools_scm]
write_to = "src/busylib/_version.py"
write_to_template = "__version__ = '{version}'\n"

[tool.ruff]
extend-exclude = [
  ".pytest_cache",
  ".vscode",
  "__pycache__",
  "build",
]
lint.extend-select = [
  # https://docs.astral.sh/ruff/rules/#pyupgrade-up
  "UP",
]

[tool.pytest]
ini_options.pythonpath = [ "." ]
ini_options.addopts = "-q"
ini_options.asyncio_mode = "auto"
